Image-Gallery-Js/style.css
* {
    box-sizing: border-box;
  }
  
  body {
    margin: 0;
    font-family: sans-serif;
    background: hsl(210, 11%, 96%);
  }
  
  .header {
    text-align: center;
    text-transform: uppercase;
    padding: 25px;
    background-color: #0a0a23;
    color: #fff;
    border-bottom: 4px solid #fdb347;
  }

  .gallery {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 900px;
    margin: auto;
    display: flex;
    align-items: center;
    gap: 10px;
  }

  button {
    padding: 10px 20px;
    background-color: #0a0a23;
    color: #fff;
    border: none;
    border-radius: 10%;
    cursor: pointer;
  }

  .gallery-container {
    overflow-x: auto;
    display: flex;
    gap: 20px;
    padding: 10px;
  }

  .gallery-container::-webkit-scrollbar {
    display: none;
  }

  .gallery-container img {
    min-width: 150px;
    object-fit: cover;
    border-radius: 10px;
    filter: grayscale(100%);
  }

  .gallery-container img:hover {
    filter: grayscale(0);
    transition: 0.8s;
    cursor: pointer;
    transform: scale(1.1);
  }

  /* For Tablet */
  @media (max-width: 820px) {
    .gallery {
        width: 600px;
    }
  }

  /* For Mobile */
  @media (max-width: 480px) {
    .gallery {
        width: 300px;
    }

    button {
        padding: 5px 10px;
    }
  }

  .lightbox {
    position: fixed;
    max-width: 700px;
    width: 100%;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(0.9);
    background: #fff;
    padding: 0 5px 5px 5px;
    border-radius: 4px;
    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
    opacity: 0;
    pointer-events: none;
  }

  .lightbox.active {
    opacity: 1;
    pointer-events: auto;
    transform: translate(-50%, -50%) scale(1);
    transition: all 0.5s ease;
  }

  .lightbox .details {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 12px 15px 12px 10px;
  }

  .details .title {
    display: flex;
    font-size: 18px;
    font-weight: 400;
  }

  .lightbox .details .icon {
    color: #007bff;
    cursor: pointer;
    font-size: 20px;
  }

  .details .title p {
    margin: 0 5px;
  }

  .details .title p.current-img {
    font-weight: 700;
  }

  .lightbox .img-box {
    display: flex;
    width: 100%;
  }

  .img-box .slide {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    font-size: 30px;
    cursor: pointer;
    color: #fff;
    width: 60px;
    height: 50px;
    line-height: 50px;
    text-align: center;
  }

  .img-box .slide.prev {
    left: 0;
  }

  .img-box .slide.next {
    right: 0;
  }

  .lightbox img {
    width: 100%;
    border-radius: 0 0 3px 3px;
  }

